post→articleに命名を変更
