# backend/internal/handler/router.go
@@ -12,7 +12,7 @@ import (
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
-func SetupRouter(userHandler *UserHandler, postHandler *PostHandler, sessionRepo model.SessionRepository) *gin.Engine {
+func SetupRouter(userHandler *UserHandler, articleHandler *ArticleHandler, sessionRepo model.SessionRepository) *gin.Engine {
 	r := gin.Default()
 
 	// CORSミドルウェアを設定
@@ -47,10 +47,10 @@ func SetupRouter(userHandler *UserHandler, postHandler *PostHandler, sessionRepo
 	{
 		authenticated.POST("/users/logout", userHandler.Logout)
 
-		posts := authenticated.Group("/posts")
+		articles := authenticated.Group("/articles")
 		{
-			posts.POST("", postHandler.CreatePost)
-			posts.DELETE("/:slug", postHandler.DeletePost)
+			articles.POST("", articleHandler.CreateArticle)
+			articles.DELETE("/:slug", articleHandler.DeleteArticle)
 		}
 	}
 
